[package]
name = "ecommerce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
tokio = { version = "^1", features = ["full"] }
futures-lite = "1.12.0"
futures = "0.3.15"
rand = "0.6"
actix = "0.12.0"