[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
lib = { path = "../lib" }
rand = "0.6"